# touchstone

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs-site/: next.config.mjs  package-lock.json  package.json  theme.config.jsx
docs-site/pages/: _meta.json  api-reference.mdx  bias-correction.mdx  calibration.mdx  ci-cd.mdx  concepts.mdx  index.mdx  panel-judging.mdx  providers.mdx  quickstart.mdx  rubrics.mdx
examples/: 01_basic_judge.py  02_panel_judging.py  03_pairwise_comparison.py  04_calibration_drift.py
tests/: test_bias.py  test_rubric.py
touchstone/: __init__.py  bias.py  calibration.py  cli.py  judge.py  models.py  panel.py  rubric.py
touchstone/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
