[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "touchstone-llm"
version = "0.1.0"
description = "Bias-aware LLM judge with multi-model consensus and calibration drift detection"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
keywords = ["llm", "evaluation", "judge", "ai", "bias", "evals"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
]

[project.optional-dependencies]
anthropic = ["anthropic>=0.40"]
openai   = ["openai>=1.0"]
ollama   = ["httpx>=0.27"]
cli      = ["typer>=0.12", "rich>=13.0"]
all      = [
    "anthropic>=0.40",
    "openai>=1.0",
    "httpx>=0.27",
    "typer>=0.12",
    "rich>=13.0",
]

[project.scripts]
touchstone = "touchstone.cli:main"

[project.urls]
Homepage      = "https://thebunnyweb.github.io/touchstone"
Repository    = "https://github.com/thebunnyweb/touchstone"
Documentation = "https://thebunnyweb.github.io/touchstone"
"Bug Tracker" = "https://github.com/thebunnyweb/touchstone/issues"

[tool.hatch.build.targets.wheel]
packages = ["touchstone"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
